After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685622 - gnome-screensaver does not support user switching due to removal of gdmflexiserver from gdm.
gnome-screensaver does not support user switching due to removal of gdmflexis...
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-06 19:42 UTC by darkxst
Modified: 2014-01-15 00:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
utils: reintroduce gdmflexiserver (28.99 KB, patch)
2012-10-08 18:20 UTC, darkxst
committed Details | Review
utils: reintroduce gdmflexiserver (28.77 KB, patch)
2012-10-15 19:47 UTC, darkxst
none Details | Review

Description darkxst 2012-10-06 19:42:03 UTC
On the Ubuntu GNOME remix, it is possible for user to run gnome-fallback and Unity[1] sessions, both of which use gnome-screensaver for the lock dialog and user switching.

Currently the lock dialog does not show the "switch user" button when running gdm 3.6, this is because it relies on the now non-existent gdmflexiserver utility. Probably gnome-screensaver needs to be updated to use libgdm.



[1] Unity is not installed by default.
Comment 1 Giovanni Campagna 2012-10-08 17:07:19 UTC
I think the best option for now is to partially revert 920b38e2aac1f79100ed86a0296bbcaf4fecabd9, and reintroduce gdmflexiserver.
For 3.8, we need to see if gnome-screensaver will still exists, and if so it makes sense to use libgdm.
Comment 2 darkxst 2012-10-08 18:20:02 UTC
Created attachment 226062 [details] [review]
utils: reintroduce gdmflexiserver

Partial revert of 920b38e2aac1f79100ed86a0296bbcaf4fecabd9 to
reinstroduce gdmflexiserver since gnome-screensaver depends on it.
Comment 3 Ray Strode [halfline] 2012-10-09 18:05:18 UTC
we'll probably want this on the stable branch too, but we'll need to strip the translations out (or get string freeze break)
Comment 4 Ray Strode [halfline] 2012-10-09 18:05:35 UTC
Comment on attachment 226062 [details] [review]
utils: reintroduce gdmflexiserver

Attachment 226062 [details] pushed as 1b41822 - utils: reintroduce gdmflexiserver
Comment 5 darkxst 2012-10-15 19:47:35 UTC
Created attachment 226502 [details] [review]
utils: reintroduce gdmflexiserver

Partial revert of 920b38e2aac1f79100ed86a0296bbcaf4fecabd9 to
reinstroduce gdmflexiserver since gnome-screensaver depends on it.
Remove strings for stable branch.