utils: reintroduce gdmflexiserver

Partial revert of 920b38e2aac1f79100ed86a0296bbcaf4fecabd9 to
reinstroduce gdmflexiserver since gnome-screensaver depends on it.

https://bugzilla.gnome.org/show_bug.cgi?id=685622
(cherry picked from commit 1b4182269b60c9fb774f24a3828d209ddaf3f486)